--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,8 +29,7 @@ stages:
   - job: CI
     displayName: CI
     timeoutInMinutes: 10
-    pool:
-      vmImage: $(vmImageName)
+    pool: mypool
     steps:
     - bash: yarn install --frozen-lockfile && yarn tsc && yarn build 
 - stage: Build
@@ -38,8 +37,7 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+    pool: mypool
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -61,8 +59,7 @@ stages:
   jobs:
   - deployment: Deploy
     displayName: Deploy
-    pool:
-      vmImage: $(vmImageName)
+    pool: mypool
     environment: 'ascii27backstage.backstage'
     strategy:
       runOnce:
