--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   dockerRegistryServiceConnection: 'f7a85630-a98a-4d43-8832-fd9d8659504a'
   imageRepository: 'asciibackstage'
   containerRegistry: 'gallowayacr12345.azurecr.io'
-  dockerfilePath: '**/Dockerfile'
+  dockerfilePath: '**/packages/backend/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'gallowayacr12345435253e0-auth'
 
@@ -36,6 +36,7 @@ stages:
     - bash: yarn build 
 - stage: Build
   displayName: Build stage
+  dependsOn: CI
   jobs:
   - job: Build
     displayName: Build
