--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,13 +34,12 @@ stages:
     - bash: yarn install --frozen-lockfile
     - bash: yarn tsc
     - bash: yarn build 
-    - bash: docker image build . -f packages/backend/Dockerfile --tag backstage
     - task: Docker@2
-      displayName: Push image
+      displayName: Build and push an image to container registry
       inputs:
-        containerRegistry: |
-          $(dockerHub)
-        repository: $(imageName)
-        command: push
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
-          test1
+          $(tag)
