--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,12 +34,5 @@ stages:
     - bash: yarn install --frozen-lockfile
     - bash: yarn tsc
     - bash: yarn build 
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+    - bash: docker image build . -f packages/backend/Dockerfile --tag backstage
+    - bash: docker push gallowayacr12345.azurecr.io/asciibackstage:$(tag) 
