--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,11 +35,5 @@ stages:
     - bash: yarn tsc
     - bash: yarn build 
     - bash: docker image build . -f packages/backend/Dockerfile --tag backstage
-    - bash: docker image tag backstage ***/$(imageRepository):$(tag)
-    - task: Docker@2
-      displayName: Push image
-      inputs:
-        containerRegistry: $(dockerRegistryServiceConnection)
-        repository: $(imageRepository)
-        command: push
-        tags: $(tag)
+    - bash: docker image tag backstage $(containerRegistry)/$(imageRepository):$(tag)
+    - bash: docker push $(containerRegistry)/$(imageRepository):$(tag)
