--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ stages:
     - task: Docker@2
       displayName: Push image
       inputs:
-        containerRegistry: $(dockerRegistryServiceConnection)
+        containerRegistry: $(containerRegistry)
         repository: $(imageRepository)
         command: push
         tags: $(tag)
