--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,10 +34,12 @@ stages:
     - bash: yarn install --frozen-lockfile
     - bash: yarn tsc
     - bash: yarn build 
-    - bash: docker build . -f packages/backend/Dockerfile -t $(containerRegistry)/$(imageRepository):$(tag) 
     - task: Docker@2
-      displayName: Login to ACR
+      displayName: Build and push an image to container registry
       inputs:
-        command: login
-        containerRegistry: $(dockerRegistryServiceConnection) 
-    - bash: docker push $(containerRegistry)/$(imageRepository):$(tag)
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
