--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ variables:
   containerRegistry: 'gallowayacr12345.azurecr.io'
   dockerfilePath: '**/packages/backend/Dockerfile'
   tag: '$(Build.BuildId)'
+  buildContext: '.'
   imagePullSecret: 'gallowayacr12345435253e0-auth'
 
   # Agent VM image name
@@ -40,6 +41,7 @@ stages:
         command: buildAndPush
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
+        buildContext: $(buildContext)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
